--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -11,6 +11,8 @@ canvas {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   z-index: -1; /* Coloca o canvas atrás dos outros elementos */
 }
 
@@ -41,6 +43,7 @@ canvas {
   border: 2px solid #ff00ff;
   padding: 40px;
   border-radius: 20px; /* Bordas mais arredondadas */
+  width: 50vw;
   color: white;
   font-size: 28px;
   z-index: 10;
